cmake_minimum_required(VERSION 3.12)
project(LAB01)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(LAB01
        inputs/gr_15v
        inputs/gr_20v
        inputs/gr_7v
        a.pdf
        activate.sh
        deprecated.h
        digr_bipartite_100_10
        digr_bipartite_10_20
        digr_bipartite_30_30
        digr_bipartite_50_30
        digr_cflp_1
        digr_cflp_2
        digr_triang_sparse_100
        digr_triang_sparse_200
        ex_basics_graph.cpp
        ex_bipartite_matching.cpp
        ex_bipartite_matching2.cpp
        ex_cflp.cpp
        ex_fractional_packing.cpp
        ex_knapsack.cpp
        ex_kpaths.cpp
        ex_perfect_matching_general_graphs.cpp
        ex_steiner-directed_gurobi.cpp
        ex_tsp_gurobi.cpp
        ex_two_matching.cpp
        ex_vertex_cover_in_bipartite_graph.cpp
        ex_viewgraph.cpp
        generate_random_euclidean_bipartite_graph.cpp
        generate_random_euclidean_graph.cpp
        generate_steiner_file.cpp
        generate_triangulated_digraph.cpp
        generate_triangulated_graph.cpp
        geompack.cpp
        geompack.hpp
        gr_100
        gr_15
        gr_20
        gr_30
        gr_40
        gr_7
        gr_70
        gr_a280
        gr_att48
        gr_att48.steiner
        gr_att532
        gr_berlin52
        gr_berlin52.pdf
        gr_berlin52.steiner
        gr_caminho
        gr_d198
        gr_d493
        gr_eucli_100
        gr_eucli_200
        gr_eucli_300
        gr_k21
        gr_novo_tipo_grafo
        gr_small_7
        gr_sparse_50
        gr_sparse_60
        gr_ulysses22
        gurobi.log
        gurobi.pdf
        INSTALL_GUROBI
        lab01.cpp
        Makefile
        Makefile-with-Lemon-installed-in-up-level-folder
        mygraphlib.cpp
        mygraphlib.h
        mylgraphlib.h
        myutils.cpp
        myutils.h
        README
        test_ex
        thirdpartprograms.h)
